--- a/css/homepage.css
+++ b/css/homepage.css
@@ -26,6 +26,8 @@
     --margin-md: 3rem;
     --item-min-height-sm: 20rem;
     --item-min-height-md: 30rem;
+    --num-cols: 4;
+    --row-height: 20rem;
 }
 
 
@@ -90,6 +92,27 @@ i{
 .sidebar {
   margin: 0 auto;
   gap: var(--gap)
+}
+
+.website-title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+  color: #5c428c;
+  font-size: var(--font-size-md);
+  width: 100%;
+}
+
+.website-title h2 {
+  font-size: var(--font-size-md);
+  gap: 1rem;
+}
+
+.website-title span {
+  color: var(--light-color);
+  font-size: var(--font-size-md);
 }
 /* ===== Primary Banner (Logo / User Login) ==== */
 
@@ -234,7 +257,7 @@ a {
 }
 
 .nav-socials i:hover {
-  color: #8c5bea;
+  color: #5c428c;
   transition: 150ms;
 }
 
@@ -301,11 +324,6 @@ a {
   margin-bottom: 5rem;
 }
 
-/* .sponsorships .container {
-  margin: 0 auto;
-  max-width: 100%;
-} */
-
 .swiper1 {
   width: 100%;
   height: 100%;
@@ -328,35 +346,30 @@ a {
   margin: 0;
 }
 
-/* Headline */
 
-#headline .container {
-  width: 100%;
-  padding: 0 0 10rem 0;
-}
+/* ===== Headline News ===== */
 
 .headline {
+  position: relative;
   width:100%;
+  height: 60rem;
   cursor: pointer;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   transition: all 0.25s ease;
-}
-
-.headline-content {
-  position: relative;
-  border-radius: 5px;
+  padding-top: 5rem;
 }
 
 .headline img {
   width: 100%;
   height: 100%;
   border-radius: 15px;
+  
 }
 
 .headline-img img {
   width: 100%;
-  height: 100%;
+  height: 60rem;
   -o-object-fit: cover;
   object-fit: cover;
 }
@@ -364,7 +377,7 @@ a {
 .headline-title {
   position: absolute;
   left: 5rem;
-  bottom: 25rem;
+  bottom: 10rem;
   color: var(--light-color);
   z-index: 5;
   font-size: var(--font-size-xl);
@@ -374,12 +387,22 @@ a {
   padding-bottom: 5rem;
 }
 
+.headline-content {
+  position: absolute;
+  height: auto;
+  width: 100%;
+  z-index: 999;
+  bottom: 0;
+  letter-spacing: 0.2rem;
+  background: var(--transparent-dark-color);
+} 
+
 .headline-content p {
   position: absolute;
   color: var(--light-color);
-  font-size: var(--font-size-md);
+  font-size: var(--font-size-sm);
   left: 5rem;
-  bottom: 15rem;
+  bottom: 7.5rem;
   width: 50%;
   z-index: 5;
 }
@@ -388,7 +411,7 @@ a {
   position:absolute;
   padding: 1.5rem;
   background-color: #fff;
-  bottom: 5rem;
+  bottom: 0rem;
   left: 5rem;
   border-radius: 10px;
   color: #5c428c;
@@ -396,21 +419,31 @@ a {
   font-weight: 600;
 }
 
+.headline-btn:hover a {
+  background-color: var(--hover-dark-color);
+  color: var(--light-color);
+  transition: 150ms;
+}
 
+ 
 /* Older posts */
+#news-articles {
+  background-color: var(--secondary-background-color);
+}
+
 #news-articles .container {
-  padding: 7.5rem 2.5rem;
+  padding: 5rem 2.5rem;
   background-color: var(--secondary-background-color);
   border-radius: 20px 20px 0 0;
 }
 
 .article-container-title {
-  width: 77%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 2.5rem 2.5rem 0;
+  padding: 0 0 5rem 0;
 }
 
 .art-title {
@@ -421,7 +454,7 @@ a {
   gap: 1rem;
   color: #5c428c;
   font-size: var(--font-size-md);
-  width: 77%;
+  width: 30%;
 }
 
 .art-title h2 {
@@ -442,12 +475,11 @@ a {
   font-size: var(--font-size-xsm);
   gap: 10px;
   cursor: pointer;
-  width: 77%;
   color: var(--light-color);
 }
 
 .quick-search-data div:hover {
-  background-color: #5c428c;
+  background-color: var(--hover-dark-color);
 }
 
 .quick-search-data div {
@@ -460,8 +492,8 @@ a {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: var(--gap);
-  width: 77%; 
-  padding: 0 2.5rem 2.5rem 0;
+  width: 100%; 
+  padding: 0 0 2.5rem 0;
 }
 
 .article {
@@ -472,6 +504,11 @@ a {
   transition: all 0.25s ease;
 }
 
+.article:hover {
+  transform: translateY(-5px);
+  transition: 150ms;
+}
+
 .article-content {
   position: relative;
   border-radius: 5px;
@@ -480,11 +517,12 @@ a {
 .article img {
   width: 100%;
   height: 100%;
+  border-radius: 1rem;
 }
 
 .article-img img {
-  width: 100%;
-  height: 100%;
+  width:100%;
+  height: 20rem;
   -o-object-fit: cover;
   object-fit: cover;
 }
@@ -492,20 +530,21 @@ a {
 .article-title {
   position: absolute;
   left: 0;
-  bottom: 0.3rem;
+  bottom: 0.4rem;
   color: var(--light-color);
   background-color: var(--transparent-dark-color);
   z-index: 5;
   font-size: 0.8em;
   padding: 1.5rem;
   width: 100%;
+  border-radius: 0 0 1rem 1rem;
 }
 
 .article-label {
   position: absolute;
   top: 0.75rem;
   left: 0.75rem;
-  background: #8c5bea;
+  background: #5c428c;
   text-transform: uppercase;
   font-weight: 300;
   font-size: 0.7em;
@@ -515,36 +554,67 @@ a {
 
 /* Fixtures & Results */
 
-.sidebar {
-  padding: 0 0.5rem;
+#fixtures-results .container {
+  padding: 5rem 2.5rem;
 }
 
-.matches {
-  float: right;
-}
-
-.sidebar-titles {
+.upcoming-title-container,
+.results-title-container {
+  width: 100%;
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2.5rem 0;
+}
+
+.upcoming-title-container {
+  padding-top: 5rem;
+}
+
+.upcoming-title,
+.results-title {
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: flex-start;
   gap: 1rem;
-  font-size: var(--font-size-xsm);
-  color:#5c428c;
-  padding-bottom: 2.5rem;
+  color: #5c428c;
+  font-size: var(--font-size-md);
+  width: 100%;
 }
 
-.sidebar-titles span {
+.upcoming-title h2,
+.results-title h2 {
+  font-size: var(--font-size-md);
+  gap: 1rem;
+}
+
+.upcoming-title span,
+.results-title span {
   color: var(--light-color);
+  font-size: var(--font-size-md);
+}
+
+.upcoming-container ,
+.results-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: var(--gap); 
 }
 
 .upcoming-matches-body,
 .results-body {
-  font-size: 1rem;
-  background-color: #2a283346;
-  padding: 1rem;
-  border-radius: 5px;
-  margin-bottom: 2rem;
-  width: 25rem;
+  background-color: var(--secondary-background-color);
+  padding: 2.5rem;
+  border-radius: 1rem;
+  margin-bottom: 1.8rem;
+  width: 100%;
+}
+
+.upcoming-matches-body:hover,
+.results-body:hover {
+  background-color: #15112085;
 }
 
 .team-sensei,
@@ -552,14 +622,14 @@ a {
 .competition {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 0.75rem;
 }
 
 .team-sensei,
 .opposition {
   display: flex;
   align-items: center;
-  font-size: 1rem;
+  font-size: var(--font-size-xsm);
   height: 2.55rem;
 }
 
@@ -568,8 +638,14 @@ a {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  font-size: 1rem;
+  font-size: var(--font-size-sm);
   padding-bottom: 1rem;
+}
+
+.date-time {
+  color: #5c428c;
+  font-size: var(--font-size-sm);
+  font-weight: 600;
 }
 
 .match-info img {
@@ -583,8 +659,8 @@ a {
 
 .team-sensei img,
 .opposition img {
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
   margin: 0.5rem 0;
 }
 
@@ -593,7 +669,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 0.75rem;
 }
 
 .team-sensei-results h2,
@@ -607,82 +683,208 @@ a {
   justify-content: space-between;
 }
 
-.upcoming3 {
-  display: none;
-}
-
-
-
 .team-sensei h3,
 .opposition h3 {
   display: flex;
-  justify-content:right
-}
+  justify-content:right;
+} */
 
 /* ===== Esports Teams ==== */
 
-#esports-teams .container {
-  padding: 0 2.5rem 5rem 2.5rem;
-  background-color: var(--secondary-background-color);
-  margin-bottom: 5rem;
-  height: auto;
+.esports-teams .container {
+  padding: 5rem 0;
 }
 
-.esports-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  width: 100%;
-  padding: 2.5rem 0;
+.esports-team-title {
+  padding: 5rem 0;
 }
 
-.esports-content div {
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-.esports-content a {
-  height: 300px;
-  width: auto;
-  cursor: pointer;
-  border: 5px solid var(--secondary-background-color);
-  
-}
-
-.esports-content a img {
-  height: 100%;
-  width: 100%;
-}
-
-.esports-content a:hover{
-  border: 1px solid #5c428c;
-  transition: 150ms;
-} 
-
-.team1,
-.team2,
-.team3 {
+.esports-team{
   position: relative;
-  padding: 0 1.25rem;
+  min-height: var(--item-min-height-md);
 }
 
-.esports-content a h2 {
+.esports-team-image{
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #8c5bea;
-  text-transform: uppercase;
-  font-weight: 300;
-  font-size: var(--font-size-sm);
-  color: var(--light-color);
-  bottom: 0;
-  width: auto;
-  z-index: 999;
-  margin: 0 2.5rem 0 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform .25s;
+  border-radius: 1rem;
 }
+
+.esports-teams-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--gap);
+}
+
+.esports-teams-container .esports-team{
+  min-height: var(--item-min-height-sm);
+}
+
+.esports-team {
+  min-height: var(--item-min-height-sm);
+}
+
+.tag-name{
+  padding: 1rem 0.5rem;
+  background-color: var(--transparent-dark-color);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+.esports-teams-container .esports-team:hover .tag-name{
+  color: var(--light-color);
+}
+
+.esports-teams-container .esports-team{
+  overflow: hidden;
+}
+
+.esports-teams-container .esports-team:hover .esports-team-image{
+  transform: scale(1.05);
+}
+
+/* ===== Sensei Shop =====*/
+
+.sensei-shop .container {
+  padding: 5rem 2.5rem;
+
+}
+
+.shop-title {
+  padding-bottom: 5rem;
+}
+
+.sensei-shop-container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(var(--num-cols), 1fr);
+  grid-auto-rows: var(--row-height);
+  gap: var(--gap);
+}
+
+.shop-tile > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+}
+
+.shop-tile:hover {
+  transform: scale(1.05);
+}
+
+.shop-tile-col-2 {
+  grid-column: span 2;
+}
+
+.shop-tile-row-2 {
+  grid-row: span 2;
+}
+
+/* ===== Footer ===== */
+
+.footer {
+  background-color: var(--secondary-background-color);
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  padding-top: 2.5rem;
+}
+
+.footer-row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  color: var(--light-color);
+  flex-wrap: wrap;
+}
+
+.logo-footer {
+  display: flex;
+  justify-content: start;
+  align-items:center;
+  gap: var(--gap);
+  padding: 2rem 0;
+}
+
+.logo-footer img {
+  height: 7.5rem;
+  width: 7.5rem;
+}
+
+.logo-footer h1 {
+  display: block;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-size: var(--font-size-lg);
+}
+
+.footer-row h4 {
+  font-size: var(--font-size-xsm);
+  font-weight: 200;
+}
+
+.footer-row .footer-links {
+  display: flex;
+  gap: var(--gap);
+  padding: 2rem 0;
+  border-bottom:  2px solid #5c428c1c;
+  flex-wrap: wrap;
+}
+
+.footer-links li a {
+  font-size: var(--font-size-xsm);
+  text-transform: capitalize;
+}
+
+.footer-row3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  color: var(--light-color);
+}
+
+.copyright {
+  display: flex;
+  justify-content: flex-start;
+  gap: var(--gap);
+  padding: 2rem 0;
+}
+
+.copyright i {
+  font-size: var(--font-size-xsm);
+}
+
+.copyright h4,
+.copyright h4 a {
+  font-size: var(--font-size-xsm);
+  font-weight: 200;
+  text-transform: capitalize;
+}
+
+.footer-socials a {
+  font-size: var(--font-size-md);
+  margin: 0 1rem;
+}
+
+.footer-socials a:hover,
+.footer-links li a:hover {
+  transition: 150ms;
+  color: #5c428c;
+}
+
+
+
 
 /* ===== Container Wrapper Responsive Design ===== */
 
@@ -716,6 +918,11 @@ a {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     padding-right: 0;
   }
+
+  .esports-teams-container {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0;
+  }
 }
 
 @media (max-width: 768px) {
@@ -723,13 +930,10 @@ a {
   .nav-socials,
   .user-panel,
   .secondary,
-  .headline-content p,
-  .upcoming3,
-  .result3 {
+  .headline-content p {
     display: none;
   }
 
-  #headline .container,
   .sidebar {
     padding-bottom: 5rem;
   }
@@ -749,8 +953,10 @@ a {
     max-width: 100%;
   }
 
-  .headline-img {
-    padding: 0 1.25rem;
+  #headline .container,
+  .esports-teams .container,
+  .sensei-shop .container {
+    padding: 0 2.5rem 5rem 2.5rem;
   }
 
   .headline-title {
@@ -758,21 +964,32 @@ a {
     font-size: var(--font-size-md);
   }
 
-  #news-articles .container  {
-    margin: 0 1.25rem;
+  .headline-btn a {
+    bottom: 5rem;
   }
 
   .article-container-title {
     padding-top: 0;
   }
 
+  .art-title {
+    width: 35%;
+  }
+
   .art-title h2,
   .art-title span,
   .art-title i {
-    font-size: 18px;
+    font-size: 1.8rem;
   }
 
-  
+  .sidebar-titles {
+    padding-bottom: 2.5rem;
+  }
+
+  .sidebar-titles-results {
+    padding: 2.5rem 0;
+  }
+
   .upcoming-container,
   .results-container {
     display: grid;
@@ -787,7 +1004,24 @@ a {
 
   .quick-search-data {
     padding-top: 1rem;
+    width: 100%;
     font-size: 1rem;
+  }
+
+  .esports-content {
+    grid-template-columns: 1fr;
+  }
+
+  .esports-content div {
+    height: 35rem;
+  }
+
+  .esports-team-title {
+    padding-top: 5rem;
+  }
+
+  .esports-teams-container {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -797,7 +1031,8 @@ a {
   .user-panel,
   .secondary,
   .result3,
-  .result4 {
+  .result4,
+  .shop-tile-hidden {
     display: none;
   }
 
@@ -807,21 +1042,30 @@ a {
   }
 
   .container,
-  #news-articles .container {
+  #news-articles .container
+  {
     max-width: 100%;
-    margin: 0 1.25rem;
     padding: 2.5rem 1rem;
   }
+ 
+   #headline .container {
+    padding: 0 1rem 2.5rem 1rem;
+   }
+
 
   .headline-title {
-    bottom: 9rem;
-    font-size: var(--font-size-sm);
-    padding-bottom: 1.25rem;
+    bottom: 7rem;
+    font-size: var(--font-size-xsm);
+    padding: 0.75rem;
+    border-radius: 0.5rem;
+    background-color: var(--transparent-dark-color);
+    width: 75%;
   }
 
   .headline-btn a{
     padding: 1.25rem;
     font-size: var(--font-size-xsm);
+    bottom: 2rem;
   }
 
 
@@ -832,7 +1076,7 @@ a {
   .upcoming-container,
   .results-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
     
   }
@@ -844,11 +1088,59 @@ a {
 
   .article-container-title {
     flex-wrap: wrap;
+    width: 100%;
+    padding-right: 0;
+    padding-bottom: 2.5rem;
+  }
+
+  .art-title {
+    width: 100%;
   }
 
   .quick-search-data {
     justify-content: flex-start;
+    flex-wrap: wrap;
     width: 100%;
+    gap: 0.5rem;
+  }
+
+  .esports-teams .container {
+    padding: 0 1rem;
+  }
+
+  .esports-team-title {
+    padding-left: 0;
+  }
+
+  .esports-teams-container,
+  .sensei-shop-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .sensei-shop .container {
+    padding: 5rem 1rem;
+  }
+
+  .footer-row .footer-links,
+  .footer-row .logo-footer {
+    justify-content: center;
+  }
+
+  .footer-info {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer-row3 {
+    flex-direction: column;
+  }
+
+  .footer-row h4 {
+    text-align: center;
+  }
+
+  .footer-socials a {
+    margin: 0 0.5rem;
   }
 }
 
@@ -866,6 +1158,28 @@ a {
 
   .logo {
     background-color: none;
+  }
+
+  .headline-title {
+    font-size: var(--font-size-xsm);
+    left: 2rem;
+    right: 2rem;
+    bottom: 5rem;
+    
+  }
+
+  .headline-btn a {
+    bottom: 1.5rem;
+    left: 2rem;
+    padding: 0.75rem;
+  }
+
+  .logo-footer {
+    justify-content: center;
+  }
+
+  .logo-footer h1 {
+    display: none;
   }
 }
 
